test/Fail/Relevance-subtyping-3.agda
f : {A B : Set} → (A → B) → .A → B
f g = g
